[gd_scene load_steps=27 format=2]

[ext_resource path="res://sprites/P1_walk.png" type="Texture" id=1]
[ext_resource path="res://sprites/P1_idle.png" type="Texture" id=2]
[ext_resource path="res://sprites/P1_attack.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Game/Player.gd" type="Script" id=4]
[ext_resource path="res://sounds/reload_finished.wav" type="AudioStream" id=5]
[ext_resource path="res://sprites/Reload.png" type="Texture" id=6]
[ext_resource path="res://sounds/zap.wav" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "walk",
"speed": 4.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "attack",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=13]
radius = 4.73813
height = 0.0

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 4 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 4 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 16, 4 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 16, 4 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 16, 4 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Player" type="Area2D"]
position = Vector2( 42.3736, 40.996 )
collision_mask = 4
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 12 )
animation = "attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 13 )

[node name="Tween" type="Tween" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="AttackTimer" type="Timer" parent="."]

[node name="TurnTimer" type="Timer" parent="."]

[node name="ReloadTimer" type="Timer" parent="."]

[node name="ReloadAnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -8 )
frames = SubResource( 19 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="ReloadSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="animation_finished" from="ReloadAnimatedSprite" to="." method="_on_ReloadAnimatedSprite_animation_finished"]
